--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+html, 
+body {
+    height: 100%;
+}
+
 body {
     font: 1.2em/1.67 'Open Sans', Helvetica, Sans-serif;
     margin: 0;
@@ -29,6 +34,11 @@ header {
     padding-right: 0px;
     height: 29px;
     margin: 0 auto;
+}
+
+#q:focus {
+    box-shadow: 0 0 15px 5px #b0e0ee;
+	border: 2px solid #bebede;
 }
 
 button {
@@ -177,6 +187,53 @@ figure img {
     width: 100%;
 }
 
+#large {
+    background-color: #f5f5f5;
+    border: 4px solid grey;
+    height: 80%;
+    width: 65%;
+    visibility: visible;
+    position: absolute;
+    top: 120px;
+    right: 10px;
+}
+
+#large img {
+    height: 512px;
+    position: relative;
+}
+.arrow-up,
+.arrow-down,
+.arrow-right,
+.arrow-left {
+    width: 0; 
+    height: 0;
+}
+
+.arrow-up {
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid grey;
+}
+  
+.arrow-down {
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid grey;
+}
+  
+.arrow-right {
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid grey;
+}
+
+.arrow-left {
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent; 
+    border-right:5px solid grey; 
+}
+
 #pager {
     margin: 0 auto;
     visibility: hidden;
@@ -202,7 +259,6 @@ figure img {
 footer {
     background: none repeat scroll 0 0 #fff;
     bottom: 0;
-    position: fixed;
     text-align: center;
     width: 100%;
 }
