--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,8 @@ body {
     background: #fff;
 }
 
-/* header and title */
+/* @group header */
+
 header {
     color: #444;
     font-family: 'Helvetica Neue', Helvetica, Sans-serif;
@@ -24,8 +25,11 @@ header {
 #title a {
     text-decoration: none;
 }
-/* end header */
 
+/* @end */
+
+
+/*
 #q {
     font-size: 1em;
     border-radius: 0.5em;
@@ -59,8 +63,130 @@ button.on {
     color: #fff;
     background-color: #444546;
 }
+*/
 
-/* throbber */
+/* @group search-box */
+
+/*Clearing Floats*/
+.cf:before, .cf:after{
+    content: "";
+    display: table;
+}
+
+.cf:after{
+    clear: both;
+}
+
+.cf{
+    zoom: 1;
+}
+
+/* Form wrapper styling */
+.form-wrapper {
+    width: 300px;
+    height: 40px;
+    padding: 5px;
+    margin: 30px auto;
+    background: #444;
+    background: rgba(0, 0, 0, .2);
+    border-radius: 5px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .4) inset, 0 1px 0 rgba(255, 255, 255, .2);
+}
+
+/* Form text input */
+.form-wrapper input {
+    width: 250px;
+    height: 20px;
+    padding: 10px 5px;
+    float: left;
+    font: bold 15px 'lucida sans', 'trebuchet MS', 'Tahoma';
+    border: 0;
+    background: #eee;
+    border-radius: 3px 0 0 3px;
+}
+
+.form-wrapper input:focus {
+    outline: 0;
+    background: #fff;
+    box-shadow: 0 0 2px rgba(0, 0, 0, .8) inset;
+}
+
+.form-wrapper input::-webkit-input-placeholder {
+   color: #999;
+   font-weight: normal;
+   font-style: italic;
+}
+
+.form-wrapper input:-moz-placeholder {
+    color: #999;
+    font-weight: normal;
+    font-style: italic;
+}
+
+.form-wrapper input:-ms-input-placeholder {
+    color: #999;
+    font-weight: normal;
+    font-style: italic;
+}
+
+/* Form submit button */
+.form-wrapper button {
+    overflow: visible;
+    position: relative;
+    float: right;
+    border: 0;
+    padding: 0;
+    cursor: pointer;
+    height: 40px;
+    width: 40px;
+    font: bold 15px/40px 'lucida sans', 'trebuchet MS', 'Tahoma';
+    color: #fff;
+    text-transform: uppercase;
+    background: #d83c3c;
+    border-radius: 0 3px 3px 0;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
+}
+
+.form-wrapper button:hover{
+    background: #e54040;
+}
+
+.form-wrapper button:active,
+.form-wrapper button:focus{
+    background: #c42f2f;
+    outline: 0;
+}
+
+/* Left arrow */
+.form-wrapper button:before {
+    content: '';
+    position: absolute;
+    border-width: 8px 8px 8px 0;
+    border-style: solid solid solid none;
+    border-color: transparent #d83c3c transparent;
+    top: 12px;
+    left: -6px;
+}
+
+.form-wrapper button:hover:before{
+    border-right-color: #e54040;
+}
+
+.form-wrapper button:focus:before,
+.form-wrapper button:active:before{
+        border-right-color: #c42f2f;
+}
+
+/* Remove extra button spacing for Mozilla Firefox */
+.form-wrapper button::-moz-focus-inner {
+    border: 0;
+    padding: 0;
+}
+
+/* @end */
+
+/* @group throbber */
+
 /* https://codepen.io/jlong/pen/bdzyn */
 @-webkit-keyframes throbber {
     0% { background: #dde2e7; }
@@ -135,9 +261,11 @@ button.on {
     right: -1.6em;
 }
 
+/* @end */
+
 .wrapper {
-    width: 95%;
-    margin: 3em auto;
+    width: 99%;
+    margin: 0 auto;
     background-color: white;
     opacity: 0.95;
 }
@@ -150,6 +278,33 @@ button.on {
     column-gap: 0.5em;
     font-size: .85em;
 }
+
+.grid {
+    margin: 1.5em 0;
+    padding: 0;
+    font-size: .85em;
+    display: flex;
+	flex-wrap: wrap;
+}
+
+/*
+.grid figure {
+	width: 150px;
+	margin-bottom: 8px;
+	margin-right: 8px;
+	font-size: 12px; 
+	display: inline-block;
+}
+
+.grid figure img {
+  width: 100%; 
+  border: 1px solid;
+}
+
+.grid figure:nth-of-type(2n) {
+	margin-right: 0;
+}
+*/
 
 .item {
     display: inline-block;
@@ -202,6 +357,7 @@ figure img {
     height: 512px;
     position: relative;
 }
+
 .arrow-up,
 .arrow-down,
 .arrow-right,
@@ -268,11 +424,23 @@ footer img {
 }
 
 @media only screen and (min-width: 300px) {
+	.form-wrapper {
+	    width: 250px;
+	}
+	
+	.form-wrapper input {
+	    width: 200px;
+	}
+
     .masonry {
         -moz-column-count: 1;
         -webkit-column-count: 1;
         column-count: 1;
     }
+    
+    .grid .item {
+		width: 100%;
+	}
     
     footer img {
         width: 100%;
@@ -285,6 +453,10 @@ footer img {
         -webkit-column-count: 2;
         column-count: 2;
     }
+    
+    .grid .item {
+		width: 50%;
+	}
 }
 
 @media only screen and (min-width: 700px) {
@@ -294,6 +466,10 @@ footer img {
         column-count: 3;
     }
     
+    .grid .item {
+		width: 33%;
+	}
+	
     footer img {
         width: 640px;;
     }
@@ -305,6 +481,10 @@ footer img {
         -webkit-column-count: 4;
         column-count: 4;
     }
+    
+    .grid .item {
+		width: 25%;
+	}
 }
 
 @media only screen and (min-width: 1100px) {
@@ -313,6 +493,10 @@ footer img {
         -webkit-column-count: 5;
         column-count: 5;
     }
+    
+    .grid .item {
+		width: 20%;
+	}
 }
 
 /* @media only screen and (min-width: 1280px) {
