--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ a:hover {
     box-shadow: 0 0 5px rgba(247, 11, 3, 0.8) inset;
 }
     
-#btn-images {
+#btnImages {
     width: 40px;
     height: 30px;
     float: left;
@@ -69,7 +69,7 @@ a:hover {
     background-color: #6b9dc8;
 }
     
-#btn-images:hover {
+#btnImages:hover {
     background-color: #e54040;
 }
     
@@ -77,7 +77,7 @@ a:hover {
     float: left;
 }
     
-#q-wrapper {
+#qWrapper {
     border: 5px solid #ccc;
     width: 280px;
     height: 30px;
@@ -194,12 +194,19 @@ figure img {
 #next:visited {
     color: blue;
 }
-    
+
 footer {
     bottom: 0;
     text-align: center;
-    position: fixed;
     width: 100%;
+}
+
+footer.fixed {
+    position: fixed;
+}
+
+footer.relative {
+    position: relative;
 }
     
 footer img {
