--- a/css/fancysearch.css
+++ b/css/fancysearch.css
@@ -1,3 +1,4 @@
+/*
 body {
     font-size: 2em;
     font-family: serif;
@@ -27,8 +28,16 @@ form.fs-form {
     top: 0;
     text-transform: uppercase;
     font-size: xx-small;
-    color: blue;
     font-weight: 400;
+    padding-left: 5px;
+}
+
+.fs-help {
+    color: darkgreen;
+}
+
+.fs-warning {
+    color: red;
 }
 
 #fs-widget {
@@ -36,8 +45,7 @@ form.fs-form {
     top: 0;
     height: 40px;
 }
-
-.fs {
+#fs-field {
     -webkit-border-top-left-radius: 5px;
     -webkit-border-bottom-left-radius: 5px;
     -moz-border-radius-topleft: 5px;
@@ -49,11 +57,20 @@ form.fs-form {
     height: auto;
     min-height: 36px;
     border: 1px solid grey;
+    padding: 0px;
+    float: left;
+    position: relative;
+    background-color: white; 
+}
+.fs-params {
+    border: 0px solid lightgreen;
+    width: calc( 100% - 35px );
+    height: auto;
+    min-height: 36px;
     font-size: 0.8em;
     padding: 0px;
     float: left;
     position: relative;
-    background-color: white;
 }
 
 .fs-button-primary {
@@ -69,6 +86,16 @@ form.fs-form {
     float: left;
     position: relative;
     right: 0;
+}
+
+.fs-button-disabled {
+    background: repeating-linear-gradient(
+        45deg,
+        lightgrey,
+        lightgrey 10px,
+        grey 10px,
+        grey 20px
+    )
 }
 
 .fs-param-empty {
@@ -118,7 +145,6 @@ form.fs-form {
 }
 .fs-key-input,
 .fs-val-input {
-    width: 100%;
     height: 30px;
     box-sizing: border-box;
     border: 0px solid lightgrey;
@@ -129,7 +155,7 @@ input.fs-key-input:focus,
 input.fs-val-input:focus {
     outline: none;
 }
-.fs-cancel {
+.fs-remove {
     float: left;
     width: 20px;
     height: 20px;
@@ -146,7 +172,7 @@ input.fs-val-input:focus {
     font-weight: 800;
     line-height: 1.4em;
 }
-.fs-cancel:hover {
+.fs-remove:hover {
     background: red;
 }
 .fs-off {
@@ -158,4 +184,222 @@ input.fs-val-input:focus {
 }
 .fs-hilite {
     border: 1px solid red;
+}
+#fs-reset {
+    float: left;
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+    margin-top: 8px;
+    cursor: pointer;
+    text-align: center;
+    border: 1px solid grey;
+    border-radius: 20px;
+    background-color: white;
+    font-size: 0.6em;
+    font-weight: 800;
+    line-height: 1.4em;
+}
+#fs-reset:hover {
+    background-color: red;
+    color: white;
+}
+*/
+.fs-off {
+    display: none;
+    visibility: hidden;
+}
+.fs-on {
+    visibility: visible;
+}
+.fs-hilite {
+    border: 1px solid red;
+}
+#fs-container {
+    position: relative;
+    width: 100%;
+}
+#fs-help {
+    text-transform: uppercase;
+    font-size: xx-small;
+    font-weight: 400;
+    padding-left: 5px;
+    color: darkgreen;
+    border: 0px solid red;
+    margin-bottom: 2px;
+}
+.fs-warning {
+    color: red;
+}
+#fs-widget {
+    position: relative;
+    min-height: 36px;
+}
+#fs-field {
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-bottomleft: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    width: calc( 100% - 65px );
+    height: auto;
+    min-height: 36px;
+    border: 1px solid grey;
+    padding: 2px;
+    float: left;
+    position: relative;
+    background-color: white;
+}
+.fs-params {
+    width: calc( 100% - 30px );
+    height: auto;
+    min-height: 36px;
+    float: left;
+    position: relative;
+}
+#fs-reset {
+    float: left;
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+    margin-top: 6px;
+    cursor: pointer;
+    text-align: center;
+    border: 1px solid grey;
+    border-radius: 20px;
+    background-color: white;
+    font-size: 0.8em;
+    font-weight: 800;
+    line-height: 1em;
+}
+#fs-reset:hover {
+    background-color: red;
+    color: white;
+}
+
+/* reset Skeleton table styles */
+th,
+td {
+  padding:unset;
+  text-align: unset;
+  border-bottom: unset; }
+th:first-child,
+td:first-child {
+  padding-left: unset; }
+th:last-child,
+td:last-child {
+  padding-right: unset; }
+/* end: reset Skeleton table styles */
+
+table.fs-param-empty,
+table.fs-param-filled {
+    float: left;
+    margin: 0 2px 2px 0;
+    font-size: 0.7em;
+    max-width: 200px;
+}
+table.fs-param-empty {
+    border: 0px solid #444;
+}
+table.fs-param-filled {
+    border: 1px solid #444;
+}
+table.fs-param-empty td,
+table.fs-param-filled td {
+    padding:2px 2px 2px 2px;
+    border: 0px solid red;
+}
+.fs-key-td {
+    background-color: grey;
+}
+.fs-val-td, 
+.fs-remove-td {
+    background-color: lightgrey;
+}
+.fs-button-primary {
+    border-radius: 0 5px 5px 0;
+    background-color: grey !important;
+    border: 1px solid grey !important;
+    color: white !important;
+    font-family: sans-serif;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 0;
+    margin-right: 5px;
+    float: left;
+    position: relative;
+    right: 0;
+    height: 42px !important;
+}
+.fs-key,
+.fs-val {
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 0px;
+    height: 100%;
+    width: auto;
+}
+.fs-key {
+    color: lightgrey;
+    background-color: grey;
+    float: left;
+}
+.fs-val {
+    color: black;
+    margin-bottom: 0px;
+    background-color: lightgrey;
+    float: right;
+}
+.fs-key-input,
+.fs-val-input {
+    height: 22px;
+    box-sizing: border-box;
+    border: 0px solid lightgrey;
+    margin: 0;
+    margin-top: -4px;
+}
+input.fs-key-input:focus,
+input.fs-val-input:focus {
+    outline: none;
+}
+.fs-remove {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    text-align: center;
+    border: 1px solid grey;
+    border-radius: 5px;
+    background-color: white;
+    font-size: 0.8em;
+    font-weight: 400;
+    line-height: 1.5em;
+}
+.fs-remove:hover {
+    background: red;
+}
+.fs-button-disabled {
+    background: repeating-linear-gradient(
+        45deg,
+        lightgrey,
+        lightgrey 10px,
+        grey 10px,
+        grey 20px
+    )
+} 
+@media (min-width: 550px) {
+    /* tweak skeleton columns for ocellus */
+    .column,
+    .columns {
+        margin-left: 0%; 
+    }
+    /* ocellus-specific styling */
+    .home-container {
+        padding-top: 20px;
+        padding-bottom: 1em;
+    }
+    /* fancysearch setting */
+    table.fs-param {
+        max-width: 400px;
+    }
 }
